--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
   justify-content: center;
   align-content: center;
-  padding: 10px 5px 5px;
+  /* padding: 10px 5px 5px; */
 }
 
 .notice-container {
