--- a/src/components/Integration/Integration.css
+++ b/src/components/Integration/Integration.css
@@ -17,5 +17,5 @@
 }
 
 .integration__content-wrapper {
-    @apply bg-white rounded-l p-8 flex flex-col text-center
+    @apply bg-white rounded-md shadow-lg p-8 flex flex-col text-center
 }
