--- a/src/components/Integration/Integration.css
+++ b/src/components/Integration/Integration.css
@@ -12,6 +12,10 @@
     @apply flex flex-wrap
 }
 
+.integration__content img {
+    @apply h-12
+}
+
 .integration__content-item {
     @apply w-1/3 p-8
 }
