fix tabs styleing bug

--- a/src/components/Features/Features.css
+++ b/src/components/Features/Features.css
@@ -1,18 +1,21 @@
 .features {}
 
-.features__tablist {
-    @apply my-12 flex justify-between
+
+
+.react-tabs__tab-list {
+    @apply my-12 flex justify-between border-0
 }
 
-.features__tab {
+.react-tabs__tab {
     width: 30%;
     @apply bg-lightest justify-between rounded shadow-md p-8 cursor-pointer
 }
 
-.features__tab--selected {
+
+.react-tabs__tab--selected {
     @apply bg-primary text-white
 }
 
 .react-tabs__tab-panel--selected {
-    @apply rounded shadow-md p-8 bg-lightest flex flex-row justify-between items-center
+    @apply rounded shadow-md bg-lightest flex flex-row justify-between items-center
 }
