--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,13 @@
 .footer {
   justify-content: center;
   align-content: center;
+  padding: 15px;
   /* padding: 10px 5px 5px; */
   @apply mt-4
+}
+
+.footer-item {
+  @apply flex flex-col mb-12
 }
 
 .footer__link {
@@ -21,9 +26,9 @@
   margin-top: 25px;
 }
 
-@media (max-width: 640px - 1px) {
+@media (max-width: 900px) {
   .notice-container {
-    justify-content: space-around;
+    @apply flex-col
   }
 }
 
