--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,3 @@
-.hero {
-    @apply flex flex-col-reverse flex-row justify-between items-center py-12
-}
-
-.hero__content {
-    @apply flex flex-col items-center text-center text-left
+.header {
+    padding: 15px;
 }
