--- a/src/components/Integration/Integration.css
+++ b/src/components/Integration/Integration.css
@@ -23,3 +23,13 @@
 .integration__content-wrapper {
     @apply bg-white rounded-md shadow-lg p-8 flex flex-col text-center
 }
+
+@media (max-width:900px) {
+    .integration {
+        @apply px-3 py-24
+    }
+
+    .integration__content-item {
+        @apply w-1/2 p-1
+    }
+}
