--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -26,13 +26,21 @@
   margin-top: 25px;
 }
 
+.notice-container h4 {
+  text-align: center;
+  margin: 0;
+}
+
 @media (max-width: 900px) {
   .notice-container {
     @apply flex-col
   }
 }
 
-.notice-container h4 {
-  text-align: center;
-  margin: 0;
+
+
+@media (min-width: 900px) {
+  .footer {
+    @apply p-24
+  }
 }
