--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -1,30 +1,3 @@
-/**
- * This injects Tailwind's base styles and any base styles registered by
- * plugins.
- */
-/* @tailwind base; */
-
-/**
- * This injects Tailwind's component classes and any component classes
- * registered by plugins.
- */
-/* @tailwind components; */
-
-/**
- * This injects Tailwind's utility classes and any utility classes registered
- * by plugins.
- */
-/* @tailwind utilities; */
-
-/**
- * Use this directive to control where Tailwind injects the responsive
- * variations of each utility.
- *
- * If omitted, Tailwind will append these classes to the very end of
- * your stylesheet by default.
- */
-/* @tailwind screens; */
-
 * {
   box-sizing: border-box;
 }
@@ -50,7 +23,7 @@ body {
  * This injects Tailwind's component classes and any component classes
  * registered by plugins.
  */
-@tailwind components;
+/* @tailwind components; */
 
 /**
  * This injects Tailwind's utility classes and any utility classes registered
@@ -72,8 +45,47 @@ body {
   min-width: 100vw;
 }
 
-a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a {
   text-decoration: none;
+  @apply text-primary;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  @apply leading-loose font-bold;
+  font-family: montserrat;
+  /* font-weight: bold; */
+  /* border-bottom: 1px dotted black; */
+  color: #3d3d3d;
+}
+
+h1 {
+  font-size: 130%;
+}
+
+h2 {
+  font-size: 110%;
+}
+
+h3 {
+  font-size: 95%;
+}
+
+h4 {
+  font-size: 90%;
+  /* font-style: italic; */
+}
+
+h5 {
+  font-size: 90%;
+  font-style: italic;
 }
 
 .layout-container {
@@ -82,11 +94,13 @@ a {
   display: flex;
   flex-direction: column;
   padding: 15px;
-  @apply text-xl leading-loose
+  @apply text-xl leading-loose;
 }
+
+
 
 @media (min-width: 900px) {
   .layout-container {
-    @apply p-24
+    @apply p-24;
   }
 }
